--- a/14-PelisulasApp/peliculasApp/src/app/pages/buscar/buscar.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/buscar/buscar.component.html
@@ -1,1 +1,6 @@
-<p>buscar works!</p>
+
+<h1>Buscar peliculas <small> {{ text }}}</small></h1>
+<hr>
+
+
+<app-peliculas-poster-grid [movies]="movies"></app-peliculas-poster-grid>
