--- a/14-PelisulasApp/peliculasApp/src/app/components/navbar/navbar.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search movie" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div class="d-flex">
+        <input #txtBuscar
+               (keyup.enter)="buscarPelicula( txtBuscar.value )"
+               class="form-control me-2" 
+               type="search" 
+               placeholder="Search movie" 
+               aria-label="Search">
+        
+        <button (click)="buscarPelicula( txtBuscar.value )" class="btn btn-outline-success" type="submit">Search</button>
+      </div>
     </div>
   </div>
 </nav>
