--- a/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-3 mb-5" *ngFor="let movie of movies" >
+    <div class="col-lg-3 col-md-4 col-sm-6  col-xl-2 mb-5" *ngFor="let movie of movies" >
 
       <img [src]="movie.poster_path | poster"
            class="poster img-fluid">
@@ -19,5 +19,4 @@
         </div>
       </div>
     </div>
-
-/div>
+</div>
