--- a/14-PelisulasApp/peliculasApp/src/app/components/slideshow/slideshow.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/slideshow/slideshow.component.html
@@ -6,7 +6,7 @@
     <div *ngFor="let movie of movies" class="swiper-slide"
           [ngStyle]="{
               'background-size': 'cover',
-              'background-image': 'url(https://image.tmdb.org/t/p/w500' + movie.backdrop_path + ')'
+              'background-image': 'url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'
           }">
 
       <div class="movie-description">
