--- a/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,8 +1,10 @@
-<div class="row">
-    <div class="col-lg-3 col-md-4 col-sm-6  col-xl-2 mb-5" *ngFor="let movie of movies" >
+<div class="row animated fadeIn puntero">
+    <div class="col-lg-3 col-md-4 col-sm-6  col-xl-2 mb-5"
+     *ngFor="let movie of movies" >
 
       <img [src]="movie.poster_path | poster"
-           class="poster img-fluid">
+           class="poster img-fluid puntero"
+           (click)="onMovieClick( movie )">
 
       <div>
         <h3> {{movie.original_title}}</h3>
