--- a/14-PelisulasApp/peliculasApp/src/app/pages/home/home.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <h1 class="mt-5">Billboard</h1>
 
-<div class="row" *ngIf="movies.length > 0">
-  <div class="col">
+<div class="row justify-content-center" *ngIf="movies.length > 0">
+  
+  <div class="col col-lg-8">
     <app-slideshow [movies]="moviesSlideShow"></app-slideshow>
   </div>
 </div>
