--- a/14-PelisulasApp/peliculasApp/src/app/pages/peliculas/peliculas.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/peliculas/peliculas.component.html
@@ -1,1 +1,52 @@
-<p>peliculas works!</p>
+
+
+<div class="row mt-5" *ngIf="movie">
+    <div class="col-md-6">
+        <!-- Imagen -->
+        <img [src]="movie.poster_path | poster" [alt]="movie.original_title"
+             class="img-fluid">
+    </div>
+
+    <div class="col-md-6">
+        <!-- Detalle -->
+        <h3>{{movie.original_title}}</h3>
+
+        <div class="row">
+            <div class="col-6 text-white">
+
+                <star-rating [value]="movie.vote_average" 
+                        [totalstars]="10" checkedcolor="yellow" 
+                        uncheckedcolor="grey" size="20px" 
+                        [readonly]="true"></star-rating>
+
+            </div>
+
+            <div class="col-6 text-white">
+                <p> {{ movie.vote_average | number:'1.1'}} </p>
+            </div>
+            
+        </div>
+
+        <div class="row mt-3">
+            <div class="col">
+                <p> {{ movie.overview }} </p>    
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col">
+                <button class="btn btn-outline-info"
+                        (click)="onBack()">
+                    Regresar
+                </button>
+            </div>
+        </div>
+        
+    </div>
+</div>
+
+<div class="row mt-5" *ngIf="cast.length > 0">
+    <div class="col">
+        <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
+    </div>
+</div>
