se hizo el login/signup y la busqueda por genero

--- a/14-PelisulasApp/peliculasApp/src/app/components/cast-slideshow/cast-slideshow.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/cast-slideshow/cast-slideshow.component.html
@@ -1,5 +1,5 @@
 
-<div class="swiper">
+<div class="swiper animated fadeIn">
     <div class="swiper-wrapper">
 
         <div *ngFor="let actor of cast" 
