--- a/14-PelisulasApp/peliculasApp/src/app/pages/peliculas/peliculas.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/peliculas/peliculas.component.html
@@ -1,10 +1,12 @@
-
+<div *ngIf="loading" class="mt-5">
+    <app-loading></app-loading>
+</div>
 
 <div class="row mt-5" *ngIf="movie">
     <div class="col-md-6">
         <!-- Imagen -->
         <img [src]="movie.poster_path | poster" [alt]="movie.original_title"
-             class="img-fluid">
+             class="img-fluid animate fadein">
     </div>
 
     <div class="col-md-6">
