--- a/14-PelisulasApp/peliculasApp/src/app/app.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-navbar></app-navbar>
 
+<!-- <div class="mt-5">
+  <app-loading></app-loading>
+</div> -->
+
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
