--- a/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,5 +1,5 @@
-<div class="row animated fadeIn puntero">
-    <div class="col-lg-3 col-md-4 col-sm-6  col-xl-2 mb-5"
+<div class="row animated fadeIn">
+    <div class="col col-lg-3 col-md-4 col-sm-6 mb-5"
      *ngFor="let movie of movies" >
 
       <img [src]="movie.poster_path | poster"
@@ -11,7 +11,7 @@
         <div class="row">
 
           <div class="col-10 text-white">
-            <star-rating [value]="movie.vote_average" [totalstars]="totalStars" checkedcolor="yellow" uncheckedcolor="grey" size="16px" [readonly]="readOnly"></star-rating>
+            <star-rating [value]="movie.vote_average / 2" [totalstars]="5" checkedcolor="yellow" uncheckedcolor="grey" size="16px" [readonly]="readOnly"></star-rating>
           </div>
 
           <div class="col text-white">
