--- a/14-PelisulasApp/peliculasApp/src/app/pages/home/home.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="loading" class="mt-5">
+  <app-loading></app-loading>
+</div>
+
 <h1 class="mt-5">Billboard</h1>
 
 <div class="row justify-content-center" *ngIf="movies.length > 0">
@@ -9,5 +13,22 @@
 
 <h1 class="mt-5"> Movies </h1>
 
-<app-peliculas-poster-grid [movies]="movies" *ngIf="movies.length > 0"></app-peliculas-poster-grid>
+<div class="row">
+  <div class="col mt-5">
+    <app-generos></app-generos>
+  </div>
+  <div class="col-10">
+    <app-peliculas-poster-grid [movies]="movies" *ngIf="movies.length > 0"></app-peliculas-poster-grid>
+  </div>
+</div>
 
+
+<!-- AGREGAR:
+      -buscar por categoria
+      -buscar por actor
+      -resenias
+      -anio
+      -terminar el login
+      -agregar series?
+      -footer
+-->
