--- a/14-PelisulasApp/peliculasApp/src/styles.css
+++ b/14-PelisulasApp/peliculasApp/src/styles.css
@@ -33,3 +33,52 @@ hr{
 .block {
     display:block;
 }
+
+.puntero {
+    cursor: pointer;
+}
+
+.left-bar {
+    background-color: #11131a;
+}
+
+.list-group-item {
+    background-color: #11131a !important;
+    border-color: #3a4053;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0px;
+}
+
+.list-group-item:hover {
+    background-color: #1963d2 !important;
+}
+
+/* animated */
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    }
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
+ }   
