--- a/14-PelisulasApp/peliculasApp/src/app/components/register/signin/signin.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/register/signin/signin.component.html
@@ -4,7 +4,7 @@
     <form autocomplete="off" [formGroup]="forma" (ngSubmit)="save()">
 
         <div class="p-5 border border-secondary rounded bg-dark">
-            <h3 class="mb-5">Create your account</h3>
+            <h3 class="mb-5 fs-1">Create your account</h3>
 
             <div class="mb-3">
                 <label class="form-label">Usuario</label>
@@ -31,17 +31,20 @@
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Repita su contraseña</label>
-                <input type="password" class="form-control"
-                    formControlName="pass2"
-                    [class.is-invalid]="pass2NoValid">
-                    <small *ngIf="noValid('pass2')" class="text-danger">Las contraseñas no coinciden</small>
-                </div>
+              <label class="form-label">Repita su contraseña</label>
+              <input type="password" class="form-control"
+                  formControlName="pass2"
+                  [class.is-invalid]="pass2NoValid">
+                  <small *ngIf="noValid('pass2')" class="text-danger">Las contraseñas no coinciden</small>
+            </div>
 
-                <div class="d-grid gap-5">
-                    <button type="submit" class="btn btn-outline-primary btn-block"> Continuar </button>
-                </div>
+            <div class="d-grid gap-5 mb-3">
+              <button type="submit" class="btn btn-outline-primary btn-block"> Continuar </button>
+            </div>
 
+            <div>
+              <a (click)="toLoginPage()" class="text-decoration-none link-danger puntero">Have an account, Log In!</a>
+            </div>
         </div>
 
     </form>
