--- a/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.css
+++ b/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.css
@@ -9,4 +9,13 @@ h3 {
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   margin: 5px;
+  transition: all .2s ease-in-out;
+}
+
+.poster:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+  opacity: 0.9;
+
+
 }
