--- a/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,10 +1,12 @@
 <div class="row animated fadeIn">
-    <div class="col col-lg-3 col-md-4 col-sm-6 mb-5"
+    <div class="col-12 col-lg-3 col-md-4 col-sm-6 mb-5"
      *ngFor="let movie of movies" >
 
-      <img [src]="movie.poster_path | poster"
-           class="poster img-fluid puntero"
-           (click)="onMovieClick( movie )">
+     <div>
+       <img [src]="movie.poster_path | poster"
+            class="poster img-fluid puntero"
+            (click)="onMovieClick( movie )">
+     </div>
 
       <div>
         <h3> {{movie.original_title}}</h3>
