feat: tv-service

--- a/14-PelisulasApp/peliculasApp/src/app/pages/home/home.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
     <app-generos></app-generos>
   </div>
   <div class="col-10">
-    <app-peliculas-poster-grid [movies]="movies" *ngIf="movies.length > 0"></app-peliculas-poster-grid>
+    <app-peliculas-poster-grid [movies]="movies" [homePosition]="pos" *ngIf="movies.length > 0"></app-peliculas-poster-grid>
   </div>
 </div>
 
