--- a/14-PelisulasApp/peliculasApp/src/app/pages/tv-home/tv-home.component.html
+++ b/14-PelisulasApp/peliculasApp/src/app/pages/tv-home/tv-home.component.html
@@ -5,8 +5,21 @@
 <h1 class="mt-5">Billboard</h1>
 
 <div class="row justify-content-center" *ngIf="series.length > 0">
-
   <div class="col">
     <app-slideshow [series]="series"></app-slideshow>
+  </div>
+</div>
+
+<div *ngIf="series.length > 0" class="row">
+  <h2 class="mb-4"> On the air </h2>
+  <div class="col">
+    <app-various-slideshow [elements]="series"> </app-various-slideshow>
+  </div>
+</div>
+
+<div *ngIf="series.length > 0" class="row">
+  <h2 class="mb-4"> On the air </h2>
+  <div class="col">
+    <app-various-slideshow [elements]="seriesTop"> </app-various-slideshow>
   </div>
 </div>
